<resources>
    <string name="app_name">Trasset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="phone_number"> Phone Number </string>
    <string name="email"> Email </string>
    <string name="password"> Password</string>
    <string name="sign_up"> Sign Up</string>
    <string name="sign_in"> Sign In</string>
    <string name="user_name">Full Name</string>
    <string name="sign_in_image">Sign In Image</string>
    <string name="from_to">%1$s to %1$s</string>
    <string name="range">Selected : %1$s to %2$s</string>
    <string name="sample_desc">This is a description of the group Hello , you understand right. OK then, cool. Hope you are…</string>
    <string name="role">Role</string>
    <string name="property"><![CDATA[<b>%1$s :</b>]]>  %2$s </string>
    <string name="type">Asset Type</string>
    <string name="asset_name">Asset Name</string>
    <string name="description">Description</string>
    <string name="icon">icon</string>
    <string name="asset_types">Asset Types</string>
    <string name="truck">Truck</string>
    <string name="salesman">Salesman</string>
    <string name="geo_features">Geo Features</string>
    <string name="geo_fence">Geo Fence</string>
    <string name="geo_route">Geo Route</string>
    <string name="date_range">Date Range</string>
    <string name="no_date_range_selected">No Date Range Selected</string>
    <string name="pick_date_range">Pick Date Range</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="about">About</string>
    <string name="details">Details</string>
    <string name="login_email">perul365@gmail.com</string>
    <string name="login_password">12345</string>
    <string name="title">title</string>
    <string name="tap_to_track">Tap To Track</string>
    <string name="search_asset">Search Asset</string>
    <string name="action">Action</string>
    <string name="current_location">Current Location</string>
</resources>
