<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="320dp"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/SignUpText"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/element_padding"
        android:text="@string/asset_types" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/truckSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="false"
        android:text="@string/truck" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/salesmanSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="false"
        android:text="@string/salesman" />

</LinearLayout>