<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.view.SignInView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/sign_in_image"
            android:elevation="5dp"
            android:gravity="center"
            android:padding="20dp"
            android:shadowColor="#000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="5"
            android:text="@string/app_name"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/userEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signInImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/sign_in_image"
            android:padding="48dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/userEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/userEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/userEmailAddress"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:padding="@dimen/element_padding"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="@id/signInImage"
            app:layout_constraintBottom_toTopOf="@id/userEmailAddress"
            tools:layout_editor_absoluteX="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmailAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/userPassword"
            app:layout_constraintEnd_toEndOf="@+id/userPassword"
            app:layout_constraintStart_toStartOf="@+id/userPassword"
            app:layout_constraintTop_toBottomOf="@+id/signInImage"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmailAddressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@string/login_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userEmailAddress"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@string/login_password" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@+id/SignUpNavButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignUpNavButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>