<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:focusableInTouchMode="true"
    tools:context=".home.view.HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:contentDescription="@string/icon"
            android:padding="8dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/assetName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/app_name"
            android:textColor="@color/md_white_1000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/notificationIcon"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:contentDescription="@string/icon"
            android:padding="8dp"
            android:src="@drawable/ic_notification" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/primaryColor"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            tools:listitem="@layout/item_notification" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior=".common.GestureLockedBottomSheetBehavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="invisible" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentHostHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/sessionNewFAB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/action"
                    android:elevation="20dp"
                    android:focusable="true"
                    app:layout_anchor="@id/bottomNavBar"
                    app:srcCompat="@drawable/ic_create" />

                <com.google.android.material.bottomappbar.BottomAppBar
                    android:id="@+id/bottomNavBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:fabAnimationMode="slide"
                    app:hideOnScroll="true" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">

                    <com.google.android.material.bottomnavigation.BottomNavigationView
                        android:id="@+id/bottomNavHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/transparent_bg"
                        android:clickable="false"
                        app:menu="@menu/bottom_nav_menu_asset" />


                </FrameLayout>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>